[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/Dialogs/dialog_option_bubble.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/dialog_bubble.tex" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Select.tex" type="Texture" id=3]
[ext_resource path="res://Fonts/OpenSans.fnt" type="BitmapFont" id=4]

[node name="option_bubble" type="Node2D"]

script/script = ExtResource( 1 )
options = 10
option1_text = "Put animated text here."
option1_action = null
option2_text = "Option 1 text."
option2_action = null
option3_text = "Option 1 text."
option3_action = null
option4_text = "Option 1 text."
option4_action = null

[node name="left_bubble" type="Sprite" parent="."]

transform/pos = Vector2( -23.5954, -116.065 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )
region = true
region_rect = Rect2( 0, 0, 40, 126 )

[node name="center_bubble" type="Sprite" parent="."]

transform/pos = Vector2( 77.6096, -116.065 )
transform/scale = Vector2( 1.56166, 1 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )
region = true
region_rect = Rect2( 60, 0, 112, 126 )

[node name="right_bubble" type="Sprite" parent="."]

transform/pos = Vector2( 189.845, -116.065 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )
flip_h = true
region = true
region_rect = Rect2( 0, 0, 40, 126 )

[node name="option_1" type="Position2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 10.6634, -155.875 )

[node name="select" type="Sprite" parent="option_1"]

transform/pos = Vector2( -1, 0 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="text" type="Label" parent="option_1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -8.0
margin/right = 198.0
margin/bottom = 13.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 1"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_2" type="Position2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 10.6634, -133.875 )

[node name="select" type="Sprite" parent="option_2"]

visibility/visible = false
transform/pos = Vector2( -1, 0 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="text" type="Label" parent="option_2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -8.0
margin/right = 198.0
margin/bottom = 13.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 2"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_3" type="Position2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 10.6634, -112.875 )

[node name="select" type="Sprite" parent="option_3"]

visibility/visible = false
transform/pos = Vector2( -1, 0 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="text" type="Label" parent="option_3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -8.0
margin/right = 198.0
margin/bottom = 13.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 3"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_4" type="Position2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 10.6634, -91.875 )

[node name="select" type="Sprite" parent="option_4"]

visibility/visible = false
transform/pos = Vector2( -1, 0 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="text" type="Label" parent="option_4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -8.0
margin/right = 198.0
margin/bottom = 13.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 4"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


